--- a/_posts/2016-06-01-那一瞬间.md
+++ b/_posts/2016-06-01-那一瞬间.md
@@ -7,6 +7,8 @@ tags: [生活]
 description: 二十岁的儿童节送给过去的自己
 ---
 
+——二十岁的儿童节送给过去的自己  
+
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;从很小的时候，我便经常一个人呆着，而且脑袋里总是想些奇奇怪怪的东西，比如“我是谁？”“我从哪里来？”“要到哪里去？”等等我都想过，其中最神奇且最困扰我的莫过于“我（存）在哪儿”这个问题了。我在某个地方吗？不是，我在我的体内，那我在我身体的那部分呢？心？不是，我不用手摸甚至感觉不到它在跳动；脑袋？脑袋是挺重要，可我同样感觉不到大脑的存在啊，我们之所以认为我们存在于头部，那是因为眼睛在头上，耳朵、鼻子也在头上，假若我的眼睛长在脚上，耳朵长在肚子上，鼻子长在手上，我依然以为自己存在于头部吗？  	
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;每当我想到这，我便开始努力想象自己眼睛长在脚上，耳朵长在肚子上，鼻子长在手上的样子，然后感受自己会在哪。很多时候我有充足的时间继续想下去：我究竟在哪儿啊？这躯体俨然不是我自己，因为对于我的意识来说它太大了，我应当存在于一个点，或者一片虚无，抑或是其他什么地方。那么我不应是随这躯体的诞生而诞生，也不因为躯体的生长而生长，我应比它更早地诞生。于是我不断强迫自己去回忆，追寻我最早的记忆，这当然是极其困难的。我还努力回忆在最早的记忆之前的记忆，显然那是没有任何感官记忆的记忆，我想发掘的是拥有记忆之前的那种感觉。  
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;我努力去想，想得头晕，有时实在没有头绪（应该是“感觉”更准确些吧）的时候，我就假设自己找到了这一刻的感觉，那么这一刻我一定是存在的，这一刻也一定不是我存在的开始，因为我可以感觉到这一刻。那么在这一刻之前的我又是怎样的呢？我存在于何处？怎样存在？又是怎样的一种感觉？  
